More functionality in shared library