@@ -1,12 +1,6 @@
-package com.danubetech.btc.connection;
+package com.danubetech.btc.connection.impl;
 
-import com.danubetech.btc.records.Block;
-import com.danubetech.btc.records.Tx;
-import com.danubetech.btc.records.TxIn;
-import com.danubetech.btc.records.TxOut;
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.json.JsonMapper;
+import com.danubetech.btc.connection.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import wf.bitcoin.javabitcoindrpcclient.BitcoinJSONRPCClient;
@@ -14,16 +8,10 @@ import wf.bitcoin.javabitcoindrpcclient.BitcoinJSONRPCClient;
 import java.net.URL;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class BitcoindRPCBitcoinConnection extends AbstractBitcoinConnection implements BitcoinConnection {
 
 	private static final Logger log = LoggerFactory.getLogger(BitcoindRPCBitcoinConnection.class);
-
-	private static final JsonMapper mapper = JsonMapper.builder()
-			.configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false)
-			.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false)
-			.build();
 
 	private final BitcoinJSONRPCClient bitcoindRpcClient;
 
@@ -40,9 +28,9 @@ public class BitcoindRPCBitcoinConnection extends AbstractBitcoinConnection impl
 	@Override
 	public Block getBlockByBlockHeight(Integer blockHeight) {
 		BitcoinJSONRPCClient bitcoinJSONRPCClient = this.getBitcoinJsonRpcClient();
-		wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinBlock = bitcoinJSONRPCClient.getBlock(blockHeight);
-		List<Tx> txs = bitcoinBlock.tx().stream().map(tx -> txFromBitcoinRawTransaction(bitcoinJSONRPCClient, tx)).collect(Collectors.toList());
-		Block block = new Block(bitcoinBlock.height(), bitcoinBlock.hash(), bitcoinBlock.time().getTime(), txs);
+		wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinjBlock = bitcoinJSONRPCClient.getBlock(blockHeight);
+		List<Tx> txs = bitcoinjBlock.tx().stream().map(tx -> txFromBitcoinjRawTransaction(bitcoinJSONRPCClient, tx)).toList();
+		Block block = blockFromBitcoinjBlock(bitcoinjBlock);
 		if (log.isDebugEnabled()) log.debug("getBlockByBlockHeight for {}: {}", blockHeight, block);
 		return block;
 	}
@@ -50,7 +38,7 @@ public class BitcoindRPCBitcoinConnection extends AbstractBitcoinConnection impl
 	@Override
 	public Tx getTransactionById(String txId) {
 		BitcoinJSONRPCClient bitcoinJSONRPCClient = this.getBitcoinJsonRpcClient();
-		Tx tx = txFromBitcoinRawTransaction(bitcoinJSONRPCClient, txId);
+		Tx tx = txFromBitcoinjRawTransaction(bitcoinJSONRPCClient, txId);
 		if (log.isDebugEnabled()) log.debug("getTransactionById for {}: {}", txId, tx);
 		return tx;
 	}
@@ -61,9 +49,9 @@ public class BitcoindRPCBitcoinConnection extends AbstractBitcoinConnection impl
 		Integer blocks = bitcoinJSONRPCClient.getBlockChainInfo().blocks();
 		Block block = null;
 		for (int blockHeight=blocks-1; blockHeight>=0; blockHeight--) {
-			wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinBlock = bitcoinJSONRPCClient.getBlock(blockHeight);
-			if (bitcoinBlock.time().getTime() < targetTime) {
-				block = new Block(bitcoinBlock.height(), bitcoinBlock.hash(), bitcoinBlock.time().getTime(), null);
+			wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinjBlock = bitcoinJSONRPCClient.getBlock(blockHeight);
+			if (bitcoinjBlock.time().getTime() < targetTime) {
+				block = blockFromBitcoinjBlock(bitcoinjBlock);
 				break;
 			}
 		}
@@ -77,9 +65,9 @@ public class BitcoindRPCBitcoinConnection extends AbstractBitcoinConnection impl
 		Integer blocks = bitcoinJSONRPCClient.getBlockChainInfo().blocks();
 		Block block = null;
 		for (int blockHeight=blocks-1; blockHeight>=0; blockHeight--) {
-			wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinBlock = bitcoinJSONRPCClient.getBlock(blockHeight);
-			if (bitcoinBlock.confirmations() >= minConfirmations) {
-				block = new Block(bitcoinBlock.height(), bitcoinBlock.hash(), bitcoinBlock.time().getTime(), null);
+			wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinjBlock = bitcoinJSONRPCClient.getBlock(blockHeight);
+			if (bitcoinjBlock.confirmations() >= minConfirmations) {
+				block = blockFromBitcoinjBlock(bitcoinjBlock);
 				break;
 			}
 		}
@@ -97,24 +85,27 @@ public class BitcoindRPCBitcoinConnection extends AbstractBitcoinConnection impl
 	 * Helper methods
 	 */
 
-	private static Tx txFromBitcoinRawTransaction(BitcoinJSONRPCClient bitcoinJSONRPCClient, String txId) {
-		if (Tx.COINBASE_TX_IDENTIFIER.equals(txId) || Tx.GENESIS_TX_IDENTIFIER.equals(txId)) {
-			return new Tx(txId, null, null, null);
-		}
-		wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.RawTransaction bitcoinRawTransaction = bitcoinJSONRPCClient.getRawTransaction(txId);
-		String txHex = bitcoinRawTransaction.hex();
-		List<TxIn> txIns = bitcoinRawTransaction.vIn().stream().map(BitcoindRPCBitcoinConnection::txInFromBitcoinIn).toList();
-		List<TxOut> txOuts = bitcoinRawTransaction.vOut().stream().map(BitcoindRPCBitcoinConnection::txOutFromBitcoinOut).toList();
-		return new Tx(txId, txHex, txIns, txOuts);
+	private static Block blockFromBitcoinjBlock(wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.Block bitcoinjBlock) {
+		return new Block(bitcoinjBlock.height(), bitcoinjBlock.hash(), bitcoinjBlock.time().getTime(), bitcoinjBlock.confirmations());
 	}
 
-	private static TxIn txInFromBitcoinIn(wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.RawTransaction.In in) {
-		String txId = in.txid();
+	private static Tx txFromBitcoinjRawTransaction(BitcoinJSONRPCClient bitcoinJSONRPCClient, String txId) {
+		if (Tx.COINBASE_TX_IDENTIFIER.equals(txId) || Tx.GENESIS_TX_IDENTIFIER.equals(txId)) {
+			return new Tx(txId, null, null);
+		}
+		wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.RawTransaction bitcoinjRawTransaction = bitcoinJSONRPCClient.getRawTransaction(txId);
+		List<TxIn> txIns = bitcoinjRawTransaction.vIn().stream().map(BitcoindRPCBitcoinConnection::txInFromBitcoinjIn).toList();
+		List<TxOut> txOuts = bitcoinjRawTransaction.vOut().stream().map(BitcoindRPCBitcoinConnection::txOutFromBitcoinjOut).toList();
+		return new Tx(txId, txIns, txOuts);
+	}
+
+	private static TxIn txInFromBitcoinjIn(wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.RawTransaction.In in) {
+        var txId = in.txid();
 		Integer vout = txId == null ? null : in.getTransactionOutput().n();
 		return new TxIn(txId, vout);
 	}
 
-	private static TxOut txOutFromBitcoinOut(wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.RawTransaction.Out out) {
+	private static TxOut txOutFromBitcoinjOut(wf.bitcoin.javabitcoindrpcclient.BitcoindRpcClient.RawTransaction.Out out) {
 		String txId = out.transaction().txId();
 		String scriptPubKeyAddress = out.scriptPubKey().mapStr("address");
 		String asm = out.scriptPubKey().asm();
